--- a/public/index.html
+++ b/public/index.html
@@ -57,15 +57,29 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>Step into the world of Mobile Dry cleaning <br />
+								and Laundry</h2>
+								<p>We offer unique services to wide spectrum of businesses and customers.<br />
+									We provide excellent services that meet the specifications of our clients in terms of freshness, smell and cleanliness.
+									<br />
+								</p>
+								<ul class="actions special">
+									<li><a href="#" class="button primary">Request Now</a></li>
+								</ul>
+									<h3>
+										This is how it works
+
+									</h3>
 							</header>
 							<ul class="icons major">
-								<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
-								<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
-								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li>
+								<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span><p>Request PickUp Online</p></li>
+								<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span><p>We Pick Up ASAP</p></li>
+								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span><P>We Clean It</P></li>
+								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span><P>We Drop Off</P></li>
+								
+							</ul>
+							<ul class="actions special">
+								<li><a href="#" class="button primary">Request Now</a></li>
 							</ul>
 						</div>
 					</section>
