--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,10 @@
 -->
 <html>
 	<head>
-		<title>Spectral by HTML5 UP</title>
+		<title>City Mobile Wet and dry cleaners</title>
 		<meta charset="utf-8" />
+		<meta name="theme-color" content="#ef5e4a" />
+
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -97,25 +99,34 @@
 					</section>
 
 				<!-- Two -->
-					<section id="two" class="wrapper alt style2">
+					<section id="two" class="wrapper alt style2" style="text-align: center;">
 						<section class="spotlight">
 							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
 								<h2>Wet Cleaning</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<p>We geared to maintaining and enhancing your fabric in the best tradition,
+									So all your laundry is washed, dried and neatly folded.
+									You receive them fresh and clean..</p>
+									<ul class="actions special">
+										<li><a href="#" class="button primary">Request Now</a></li>
+									</ul>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>Bulky Cleaning</h2>
+								<p>Request Online and we pick your bag of clothes, You will receive it clean at incredibly cheaper Rates</p>
+								<ul class="actions special">
+									<li><a href="#" class="button primary">Request Now</a></li>
+								</ul>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="images/express.png" alt="express drycleaner image" /></div><div class="content">
+								<h2>Express Cleaning</h2>
+								<p>We offer same day wet  and dry cleaning services for laundry picked before 9am, Request in the morning, enjoy your day and we drop it before 6pm </p>
+								<ul class="actions special">
+									<li><a href="#" class="button primary">Request Now</a></li>
+								</ul>
 							</div>
 						</section>
 					</section>
