--- a/public/index.html
+++ b/public/index.html
@@ -192,7 +192,7 @@
 							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy;<span id="date"></span> Mobile wet and dry cleaners</li><li>All rights reserved</li>
 						</ul>
 					</footer>
 
@@ -206,6 +206,10 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script>
+				let date =  new Date();
+				document.getElementById('date').innerHTML = date.getFullYear();
+			</script>
 
 	</body>
 </html>
