adding reviews images

--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@
 							<header class="major">
 								<h2>Step into the world of Mobile Wet and  Dry cleaning</h2>
 								<p>We offer unique services to wide spectrum of businesses and customers.<br />
-									We provide excellent services that meet the specifications of our clients in terms of freshness, smell and cleanliness.
+									We provide excellent services that meet the specifications of our clients in terms of freshness, smell, cleanliness and time.
 									<br />
 								</p>
 								<ul class="actions special">
@@ -123,7 +123,7 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/express.png" alt="express drycleaner image" /></div><div class="content">
 								<h2>Express Cleaning</h2>
-								<p>We offer same day wet  and dry cleaning services for laundry picked before 9am, Request in the morning, enjoy your day and we drop it before 6pm </p>
+								<p>We offer same day wet  and dry cleaning services for requests made before 9am, Request in the morning, enjoy your day and we drop it before 6pm </p>
 								<ul class="actions special">
 									<li><a href="#" class="button primary">Request Now</a></li>
 								</ul>
@@ -135,35 +135,40 @@
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Accumsan mus tortor nunc aliquet</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>Some of our Happy clients</h2>
+								<p>Lets have some positive reviews from some of our happy clients  who have tried our services.</p>
 							</header>
 							<ul class="features">
-								<li class="icon fa-paper-plane">
-									<h3>Arcu accumsan</h3>
+								<li class="icon">
+									<div class="review-image">
+										<img src="images/cool-profile-pictures-retouching-1.jpg" alt="kent whisky">
+									</div>
+									<h3>Anitah</h3>
 									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
 								</li>
-								<li class="icon solid fa-laptop">
-									<h3>Ac Augue Eget</h3>
+								<li class="icon ">
+									<div class="review-image">
+										<img src="images/FB_IMG_16176107594111209.jpg" alt="kent whisky">
+									</div>
+									<h3>Kent</h3>
 									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
 								</li>
-								<li class="icon solid fa-code">
-									<h3>Mus Scelerisque</h3>
+								<li class="icon">
+									<div class="review-image">
+										<img src="images/FB_IMG_16176105804758873.jpg" alt="Robert">
+									</div>
+									<h3>Robert</h3>
 									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
 								</li>
-								<li class="icon solid fa-headphones-alt">
-									<h3>Mauris Imperdiet</h3>
+								<li class="icon">
+									<div class="review-image">
+										<img src="images/FB_IMG_16176108649851841.jpg" alt="Nuhu">
+									</div>
+									<h3>Nuhu</h3>
 									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
 								</li>
-								<li class="icon fa-heart">
-									<h3>Aenean Primis</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-flag">
-									<h3>Tortor Ut</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
+								
+								
 							</ul>
 						</div>
 					</section>
