--- a/public/index.html
+++ b/public/index.html
@@ -69,9 +69,9 @@
 						<div class="inner">
 							<header class="major">
 								<h2>Step into the world of Mobile Wet and  Dry cleaning</h2>
-								<p>We offer unique services to wide spectrum of businesses and customers.<br />
-									We provide excellent services that meet the specifications of our clients in terms of freshness, smell, cleanliness and time.<br />
-									We clean Every thing from <strong>Suits</strong> to <strong>Carpets</strong>
+								<p>
+									We clean <strong>Every thing</strong> from <strong>Suits</strong> to <strong>Carpets</strong><br />
+									We offer unique services to wide spectrum of businesses and customers,<br />by providing excellent services that meet the specifications of our clients.<br />
 									<br />
 								</p>
 								<ul class="actions special">
