--- a/public/index.html
+++ b/public/index.html
@@ -69,12 +69,9 @@
 						<div class="inner">
 							<header class="major">
 								<h2>Step into the world of Mobile Wet and  Dry cleaning</h2>
+									<p>We clean <strong>Every thing</strong> from <strong>Suits</strong> to <strong>Carpets</strong></p>
 								<p>
-									We clean <strong>Every thing</strong> from <strong>Suits</strong> to <strong>Carpets</strong><br>
-									<br>
-									<br>
-									We offer unique services to wide spectrum of businesses and customers<br>by providing excellent services that meet the specifications of our clients.<br />
-									<br />
+									We offer unique services to wide spectrum of businesses and customers<br>by providing excellent services that meet the specifications of our clients.
 								</p>
 								<ul class="actions special">
 									<li><a href="#" class="button primary">Request Now</a></li>
