addding contact us

--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE HTML>
 <!--
-	Spectral by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	
+	html5up.net 
 -->
 <html>
 	<head>
@@ -38,8 +37,7 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Generic</a></li>
-											<li><a href="elements.html">Elements</a></li>
+											<li><a href="#contactus">Contact Us</a></li>
 											<li><a href="#">Sign Up</a></li>
 											<li><a href="#">Log In</a></li>
 										</ul>
@@ -71,7 +69,7 @@
 								<h2>Step into the world of Mobile Wet and  Dry cleaning</h2>
 									<p>We clean <strong>Every thing</strong> from <strong>Suits</strong> to <strong>Carpets</strong></p>
 								<p>
-									We offer unique services to wide spectrum of businesses and customers<br>by providing excellent services that meet the specifications of our clients.
+									npWe offer unique services to wide spectrum of businesses and customers<br>by providing excellent services that meet the specifications of our clients.
 								</p>
 								<ul class="actions special">
 									<li><a href="#" class="button primary">Request Now</a></li>
@@ -189,13 +187,16 @@
 
 				<!-- Footer -->
 					<footer id="footer">
+						<a id="contactus">
 						<ul class="icons">
+							<li><a href="tel:0789567701" class="icon solid fa-phone"><span class="label">Phone</span></a></li>
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
+					</a>
 						<ul class="copyright">
 							<li>&copy;<span id="date"></span> Mobile wet and dry cleaners</li><li>All rights reserved</li>
 						</ul>
