adding phone call functionality button

--- a/public/index.html
+++ b/public/index.html
@@ -180,7 +180,10 @@
 							</header>
 							
 							<ul class="actions stacked">
+								
 								<li><a href="#" class="button fit primary">Request Now</a></li>
+								<li><a href="tel:0789567701" class="button fit">call now</a></li>
+
 							</ul>
 						</div>
 					</section>
