adding call now buttons

--- a/public/index.html
+++ b/public/index.html
@@ -57,6 +57,8 @@
 							And Drop It Clean ASAP <br><span><em>At a cheaper price</em></span></h3>
 							<ul class="actions special">
 								<li><a href="#" class="button primary">Request Now</a></li>
+								<li><a href="tel:0789567701" class="button fit">call now</a></li>
+
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
@@ -73,6 +75,8 @@
 								</p>
 								<ul class="actions special">
 									<li><a href="#" class="button primary">Request Now</a></li>
+								    <li><a href="tel:0789567701" class="button fit">call now</a></li>
+
 								</ul>
 									<h3>
 										This is how it works
@@ -92,6 +96,8 @@
 						<section class="mt-5 after-how-it-works-button">
 							<ul class="actions special">
 								<li><a href="#" class="button primary">Request Now</a></li>
+								<li><a href="tel:0789567701" class="button fit">call now</a></li>
+
 							</ul>
 						</section>
 					</section>
@@ -106,6 +112,8 @@
 									You receive them fresh and clean..</p>
 									<ul class="actions special">
 										<li><a href="#" class="button primary">Request Now</a></li>
+										<li><a href="tel:0789567701" class="button fit">call now</a></li>
+
 									</ul>
 							</div>
 						</section>
@@ -115,6 +123,8 @@
 								<p>Request Online and we pick your bag of clothes, You will receive it clean at incredibly cheaper Rates</p>
 								<ul class="actions special">
 									<li><a href="#" class="button primary">Request Now</a></li>
+								<li><a href="tel:0789567701" class="button fit">call now</a></li>
+
 								</ul>
 							</div>
 						</section>
@@ -124,6 +134,8 @@
 								<p>We offer same day wet  and dry cleaning services for requests made before 9am, Request in the morning, enjoy your day and we drop it before 6pm </p>
 								<ul class="actions special">
 									<li><a href="#" class="button primary">Request Now</a></li>
+									<li><a href="tel:0789567701" class="button fit">call now</a></li>
+
 								</ul>
 							</div>
 						</section>
