adding the favicon

--- a/public/index.html
+++ b/public/index.html
@@ -5,22 +5,17 @@
 -->
 <html>
 	<head>
-		<title>City Mobile Wet and dry cleaners</title>
+		<title>Mobile Wet and dry cleaners</title>
 		<meta charset="utf-8" />
 		<meta name="theme-color" content="#ef5e4a" />
 
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<style type="text/css">
-			
-			@media only screen and (max-width: 600px) {
-				.phones{
-				width: 100% !important;
-			}
-}
+		<!--favicon-->
+		<link rel="icon" href="images/drycleanerlogo.png" type="image/icon type">
 
-		</style>
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		
 	</head>
 	<body class="landing is-preload">
 
@@ -71,7 +66,7 @@
 								<h2>Step into the world of Mobile Wet and  Dry cleaning</h2>
 									<p>We clean <strong>Every thing</strong> from <strong>Suits</strong> to <strong>Carpets</strong></p>
 								<p>
-									npWe offer unique services to wide spectrum of businesses and customers<br>by providing excellent services that meet the specifications of our clients.
+									We offer unique services to wide spectrum of businesses and customers<br>by providing excellent services that meet the specifications of our clients.
 								</p>
 								<ul class="actions special">
 									<li><a href="#" class="button primary">Request Now</a></li>
@@ -84,6 +79,7 @@
 									</h3>
 							</header>
 							<ul class="icons major">
+								<p>Request online</p>
 								<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span><p>Request PickUp Online</p></li>
 								<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span><p>We Pick Up ASAP</p></li>
 								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span><P>We Clean It</P></li>
