--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
 							Lets Pick your Dirty Laundry From Where You Are<br />
 							And Drop It Clean ASAP <br><span><em>At a cheaper price</em></span></h3>
 							<ul class="actions special">
-								<li><a href="#" class="button primary">Request Now</a></li>
+								<li><a href="#" class="button primary" id="myBtn">Request Now</a></li>
 								<li><a href="tel:0789567701" class="button fit">call now</a></li>
 
 							</ul>
@@ -79,7 +79,6 @@
 									</h3>
 							</header>
 							<ul class="icons major">
-								<p>Request online</p>
 								<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span><p>Request PickUp Online</p></li>
 								<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span><p>We Pick Up ASAP</p></li>
 								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span><P>We Clean It</P></li>
@@ -214,9 +213,29 @@
 					</footer>
 
 			</div>
+			<!--request modal-->
+			<section class="">
+			
+
+				<!-- The Modal -->
+				<div id="myModal" class="modal">
+
+				<!-- Modal content -->
+				<div class="modal-content">
+					<span class="close">&times;</span>
+					<p>Some text in the Modal..</p>
+				</div>
+
+				</div>
+			</section>
+			<!--request modal-->
+
+		
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
+			<!--lean js-->
+			<script type="text/javascript" src="assets/js/jquery.leanModal.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
@@ -224,8 +243,31 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 			<script>
+				//date
 				let date =  new Date();
 				document.getElementById('date').innerHTML = date.getFullYear();
+				//modal js
+				// Get the modal
+				let modal = document.getElementById("myModal");
+				// Get the button that opens the modal
+				let btn = document.getElementById("myBtn");
+				// Get the <span> element that closes the modal
+				var span = document.getElementsByClassName("close")[0];
+				btn.onclick = () =>{
+					modal.style.display = "block";
+
+				}
+				// When the user clicks on <span> (x), close the modal
+				span.onclick = function() {
+				modal.style.display = "none";
+				}
+
+				// When the user clicks anywhere outside of the modal, close it
+				window.onclick = function(event) {
+				if (event.target == modal) {
+					modal.style.display = "none";
+				}
+				}
 			</script>
 
 	</body>
