--- a/public/index.html
+++ b/public/index.html
@@ -116,7 +116,7 @@
 								<h2>Bulky Cleaning</h2>
 								<p>Request Online and we pick your bag of clothes, You will receive it clean at incredibly cheaper Rates</p>
 								<ul class="actions special">
-									<li><a href="#" class="button primary">Request Now</a></li>
+									<li><a href="#" class="button primary request-button">Request Now</a></li>
 								<li><a href="tel:0789567701" class="button fit">call now</a></li>
 
 								</ul>
@@ -127,7 +127,7 @@
 								<h2>Express Cleaning</h2>
 								<p>We offer same day wet  and dry cleaning services for requests made before 9am, Request in the morning, enjoy your day and we drop it before 6pm </p>
 								<ul class="actions special">
-									<li><a href="#" class="button primary">Request Now</a></li>
+									<li><a href="#" class="button primary request-button">Request Now</a></li>
 									<li><a href="tel:0789567701" class="button fit">call now</a></li>
 
 								</ul>
@@ -187,7 +187,7 @@
 							
 							<ul class="actions stacked">
 								
-								<li><a href="#" class="button fit primary">Request Now</a></li>
+								<li><a href="#" class="button fit primary request-button">Request Now</a></li>
 								<li><a href="tel:0789567701" class="button fit">call now</a></li>
 
 							</ul>
