--- a/public/index.html
+++ b/public/index.html
@@ -129,7 +129,6 @@
 								<ul class="actions special">
 									<li><a href="#" class="button primary request-button">Request Now</a></li>
 									<li><a href="tel:0789567701" class="button fit">call now</a></li>
-
 								</ul>
 							</div>
 						</section>
@@ -222,11 +221,11 @@
 				<div class="modal-content">
 					<span class="close">&times;</span>
 					<div class="container"  style="background-color:rgba(43,52,61, 0.9)">
-						<form action="" method="POST">
+						<form action="/request" method="POST">
 							<label for="Phone number">Phone Number</label>
-							<input type="text" name="phone number" placeholder="Phone Number">
+							<input type="text" name="phone" placeholder="Phone Number">
 							<label for="message">Optional Message</label>
-							<textarea name="" id="" cols="15" rows="5"></textarea>
+							<textarea name="message" id="" cols="15" rows="5"></textarea>
 							<br>
 							<button type="submit" class="button button-primary" value="submit">Submit</button>
 						</form>
