--- a/public/indexxx.html
+++ b/public/indexxx.html
@@ -221,7 +221,7 @@
 				<div class="modal-content">
 					<span class="close">&times;</span>
 					<div class="container"  style="background-color:rgba(43,52,61, 0.9)">
-						<form action="/request" method="POST">
+						<form action="/" method="POST">
 							<label for="Phone number">Phone Number</label>
 							<input type="text" name="phone" placeholder="Phone Number">
 							<label for="message">Optional Message</label>
